# SMAProject

./: .gitignore  CMakeLists.txt  SMA_headset_V1.cpp
Documents/: SCA-Board-CROP - Copy.xcf
View3D/: MCP3208.cpp  MCP3208.h  MCP4922.cpp  MCP4922.h  View3D.pro  camera.cpp  camera.h  commons.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythreadclass.h  oleddisplay.cpp  oleddisplay.h  sma.cpp  sma.h  sma_headset.cpp  sma_headset.h
lib/: CMakeLists.txt  MCP3208.cpp  MCP3208.h  MCP4922.cpp  MCP4922.h  sma.cpp  sma.h
